# hopfield_model_network

./: README.md  pyproject.toml  requirements.txt
exercise/: alphabet.xlsx
exercise/scripts/: initialization.py  main.py  part_a.py  part_b.py  part_c.py  part_d.py
hopfield_model/: __init__.py  network.py  typing.py  utilities.py
hopfield_model/visualization/: plot_controller.py  plotting.py  typing.py
